constraints/general-automount-serviceaccount-token-samples-automount-serviceaccount-token-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAutomountServiceAccountTokenPod
metadata: # kpt-merge: /psp-automount-serviceaccount-token-pod
  name: psp-automount-serviceaccount-token-pod
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system"]
